[gd_scene load_steps=6 format=3 uid="uid://jnp0a0eygt8m"]

[ext_resource type="Script" path="res://cow_stage_generator.gd" id="1_l2u7d"]
[ext_resource type="PackedScene" uid="uid://dm575d23pes8" path="res://enemies/green_enemy.tscn" id="2_giw7s"]
[ext_resource type="PackedScene" uid="uid://bpn60ckf46cbe" path="res://enemies/tiger_enemy.tscn" id="3_0hr84"]
[ext_resource type="PackedScene" uid="uid://nsfgaqqg7lxx" path="res://enemies/sheep_enemy.tscn" id="4_2sak1"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="5_ibpid"]

[node name="CowStageGenerator" type="Node2D"]
script = ExtResource("1_l2u7d")
GreenEnemyScene = ExtResource("2_giw7s")
TigerEnemyScene = ExtResource("3_0hr84")
SheepEnemyScene = ExtResource("4_2sak1")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("5_ibpid")

[node name="GreenEnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="TigerEnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="SheepEnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
